<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (c) 2007, Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); 
 * you may not use this file except in compliance with the License. 
 * You may obtain a copy of the License at 
 *
 *     http://www.apache.org/licenses/LICENSE-2.0 
 *
 * Unless required by applicable law or agreed to in writing, software 
 * distributed under the License is distributed on an "AS IS" BASIS, 
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
 * See the License for the specific language governing permissions and 
 * limitations under the License.
 */
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <AbsoluteLayout
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/bkgnd"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <com.ringdroid.WaveformView
            android:id="@+id/waveform"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <com.ringdroid.MarkerView
            android:id="@+id/startmarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/START_MARKER"
            android:nextFocusDown="@+id/endmarker"
            android:src="@drawable/marker_left" />

        <com.ringdroid.MarkerView
            android:id="@+id/endmarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/END_MARKER"
            android:nextFocusDown="@+id/info"
            android:nextFocusUp="@+id/startmarker"
            android:src="@drawable/marker_right" />
    </AbsoluteLayout>

    <TextView
        android:id="@+id/info"
        style="@style/AudioFileInfoOverlayText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:nextFocusDown="@+id/play"
        android:nextFocusUp="@+id/endmarker" />

    <LinearLayout
        style="@style/ToolbarBackground"
        android:layout_width="fill_parent"
        android:layout_height="62dip"
        android:gravity="center" >

        <ImageButton
            android:id="@+id/rew"
            style="@android:style/MediaButton"
            android:layout_width="64dip"
            android:layout_height="52dip"
            android:layout_marginBottom="6dip"
            android:layout_marginTop="6dip"
            android:contentDescription="@string/REWIND"
            android:src="@android:drawable/ic_media_previous" />

        <ImageButton
            android:id="@+id/play"
            style="@android:style/MediaButton"
            android:layout_width="71dip"
            android:layout_height="52dip"
            android:layout_marginBottom="6dip"
            android:layout_marginTop="6dip"
            android:contentDescription="@string/PLAY"
            android:src="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/ffwd"
            style="@android:style/MediaButton"
            android:layout_width="64dip"
            android:layout_height="52dip"
            android:layout_marginBottom="6dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="6dip"
            android:contentDescription="@string/FFWD"
            android:src="@android:drawable/ic_media_next" />

        <LinearLayout style="@style/VerticalDividerLeft" />

        <LinearLayout style="@style/VerticalDividerRight" />

        <ImageButton
            android:id="@+id/zoom_in"
            android:layout_width="52dip"
            android:layout_height="52dip"
            android:layout_marginBottom="8dip"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="9dip"
            android:contentDescription="@string/ZOOM_IN"
            android:src="@drawable/gtk_zoom_in" />

        <ImageButton
            android:id="@+id/zoom_out"
            android:layout_width="52dip"
            android:layout_height="52dip"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="9dip"
            android:contentDescription="@string/ZOOM_OUT"
            android:src="@drawable/gtk_zoom_out" />
    </LinearLayout>

    <LinearLayout style="@style/HorizontalDividerTop" />

    <LinearLayout style="@style/HorizontalDividerBottom" />

    <LinearLayout
        style="@style/ToolbarBackground"
        android:layout_width="fill_parent"
        android:layout_height="62dip"
        android:gravity="center_vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="6dip"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/mark_start"
                android:layout_width="wrap_content"
                android:layout_height="31dip"
                android:clickable="true"
                android:text="@string/START_LABEL"
                android:textColor="#ffffffff"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mark_end"
                android:layout_width="wrap_content"
                android:layout_height="31dip"
                android:clickable="true"
                android:text="@string/END_LABEL"
                android:textColor="#ffffffff"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="5dip"
            android:gravity="center"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/starttext"
                android:layout_width="70dip"
                android:layout_height="31dip"
                android:layout_marginTop="5dip"
                android:contentDescription="@string/START_LABEL"
                android:inputType="numberDecimal"
                android:textSize="11sp" />

            <EditText
                android:id="@+id/endtext"
                android:layout_width="70dip"
                android:layout_height="31dip"
                android:contentDescription="@string/END_LABEL"
                android:inputType="numberDecimal"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout style="@style/VerticalDividerLeft" />

        <LinearLayout style="@style/VerticalDividerRight" />

        <LinearLayout style="@style/VerticalDividerLeft" />

        <LinearLayout style="@style/VerticalDividerRight" />
    </LinearLayout>

</LinearLayout>